[package]
name = "veb-tree"
version = "0.1.0"
edition = "2021"
description = "van Emde Boas tree"
license = "MIT"
repository = "https://github.com/Daniel-Aaron-Bloom/veb-tree"

[dependencies]
ghost = "0.1"
hashbrown = "0.13"
typenum = "1"
generic-array = "0.14"

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
pprof = { version = "0.11", features = ["flamegraph"] }

[[bench]]
name = "random"
harness = false

[lib]
bench = false

#[profile.bench]
#debug = true
