[package]
name = "veb-tree"
version = "0.2.0"
edition = "2021"
description = "van Emde Boas tree"
license = "MIT"
repository = "https://github.com/Daniel-Aaron-Bloom/veb-tree"

[dependencies]
ghost = "0.1"
hashbrown = "0.16"
typenum = "1"
generic-array = "1"
polonius-the-crab = "0.3"
vec-entry = "0.1.0"

[dev-dependencies]
criterion = "0.8"
rand = "0.10"
rand_distr = "0.6"
pprof = { version = "0.15", features = ["flamegraph"] }

[[bench]]
name = "random"
harness = false

[lib]
bench = false

#[profile.bench]
#debug = true
